suite/tests/goto/invalid/dup-nested-label.c
int main(void)
{
    goto done;

done:
done:
    return 1;
}
